Add helm overides and make proper istio manifests.

--- a/manifests/azure.yaml
+++ b/manifests/azure.yaml
@@ -32,7 +32,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: docker.io/emailservice:sdake
+        image: docker.io/sdake/emailservice:sdake
         ports:
         - containerPort: 8080
         env:
