--- a/manifests_se/emea/productcatalogservice.yaml
+++ b/manifests_se/emea/productcatalogservice.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
-  name: cartservice
+  name: productcatalogservice
 spec:
   hosts:
-  - cartservice.default.global
+  - productcatalogservice.default.global
   location: MESH_INTERNAL
   ports:
   - name: grpc
-    number: 7070
+    number: 3550
     protocol: grpc
   resolution: STATIC
   addresses:
-  - 240.255.3.3
+  - 240.255.1.2
   endpoints:
-  - address: GATEWAY3
+  - address: 159.122.148.147
     ports:
       grpc: 15443
 ---
