--- a/manifests_se/us/shippingservice.yaml
+++ b/manifests_se/us/shippingservice.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
-  name: redis-cart
+  name: shippingservice
 spec:
   hosts:
-  - redis-cart.default.global
+  - shippingservice.default.global
   location: MESH_INTERNAL
   ports:
-  - name: redis
-    number: 6379
-    protocol: tcp
+  - name: grpc
+    number: 50051
+    protocol: grpc
   resolution: STATIC
   addresses:
-  - 240.255.3.6
+  - 240.255.0.4
   endpoints:
-  - address: GATEWAY3
+  - address: 169.62.77.42
     ports:
-      redis: 15443
+      grpc: 15443
 ---
